--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Boris Gordon</title>
+	<title>Boris Gordon - Home</title>
 </head>
 <body>
 	<section class="vcard" style="width:80%;margin:auto; margin-top:10%">
