--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<title>Boris Gordon - Home</title>
 </head>
 <body>
-	<section class="vcard" style="width:80%;margin:auto; margin-top:10%">
+	<section class="vcard" style="width:80%;margin:auto;margin-top:10%">
 		<h1 class="fn">Boris Gordon</h1>
-		<img width="115px" style="float:right; margin: 10px" src="/images/boz-avatar.jpeg" class="photo" />
+		<img width="115px" style="float:right; margin:10px" src="/images/boz-avatar.jpeg" class="photo" />
 		<h2 class="role" style="font-size:1em;text-transform:;">Software engineer</h2>
 		<p>Damn it, you've found me. I write software for a living and am currently located in <i class="adr"><span class="locality">Sydney</span>, <span class="country-name">Australia</span></i>.</p>
 		<p>You can contact me by email (at <a href="mailto:email@boris.com.au" class="email">boris.com.au</a>) or on twitter</a> and other places on the internet (<a href="http://twitter.com/boztek">@<span class="nickname">boztek</span></a>).</p>
