--- a/source/index.html
+++ b/source/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 	<title>Boris Gordon - Home</title>
 </head>
 <body>
-	<section class="vcard" style="width:80%;margin:auto;margin-top:10%">
+	<section class="vcard">
 		<h1 class="fn">Boris Gordon</h1>
 		<img width="115px" style="float:right;margin:10px" src="/images/boz-tilt.jpg" class="photo" />
 		<h2 class="role" style="font-size:1em;text-decoration:underline;">Software engineer</h2>
