--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,8 @@
 <body>
 	<section class="vcard">
 		<h1 class="fn">Boris Gordon</h1>
-		<img width="115px" style="float:right;margin:10px" src="/images/boz-tilt.jpg" class="photo" />
-		<h2 class="role" style="font-size:1em;text-decoration:underline;">Software engineer</h2>
+		<h2 class="role">Software engineer</h2>
+		<img class="photo" src="/images/boz-tilt.jpg" width="115px" />
 		<p>Damn it, you've found me. I write software for a living and am currently located in <i class="adr"><span class="locality">Sydney</span>, <span class="country-name">Australia</span></i>.</p>
 		<p>You can contact me by email (at <a href="mailto:email@boris.com.au" class="email">boris.com.au</a>) or on twitter</a> and other places on the internet (<a href="http://twitter.com/boztek">@<span class="nickname">boztek</span></a>).</p>
 	</section>
